objects/BTx_Project_Resource_Stakeholder__c.object
<CustomObject>
    <fields>
        <fullName>Cisco_Partner_Resource_Name__c</fullName>
        <description>Add name of Cisco or Partner resource assigned to the engagement.  Complete one Engagement Resource record for each resource working on the engagement.</description>
        <inlineHelpText>Add name of Cisco or Partner resource assigned to the engagement.  Complete one Engagement Resource record for each resource working on the engagement.</inlineHelpText>
        <label>Cisco/Partner/Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Provide any additional information relevant to the role  the resource or stakeholder will play in the engagement process.</description>
        <inlineHelpText>Provide any additional information relevant to the role  the resource or stakeholder will play in the engagement process.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Stakeholder_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select a customer stakeholder name from the available customer contacts.  If contact record doesn't exist, add the contact to the customer database.</description>
        <inlineHelpText>Select a customer stakeholder name from the available customer contacts.  If contact record doesn't exist, add the contact to the customer database.</inlineHelpText>
        <label>Customer Stakeholder Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>BTx_Engagement_Resources_Stakeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Engaged__c</fullName>
        <description>Identify the date on which the resource or stakeholder began work on the engagement.</description>
        <inlineHelpText>Identify the date on which the resource or stakeholder began work on the engagement.</inlineHelpText>
        <label>Date Engaged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_Engaged__c</fullName>
        <description>Identify the phase of the engagement when the resource/stakeholder became involved.</description>
        <inlineHelpText>Identify the phase of the engagement when the resource/stakeholder became involved.</inlineHelpText>
        <label>Phase Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identify and Engage</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Propose</fullName>
                </value>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Implement and Develop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Engagement to which the resource is related to.</description>
        <label>Project</label>
        <referenceTo>BTx_Engagement_Activity__c</referenceTo>
        <relationshipLabel>BTx Project Resources/Stakeholders</relationshipLabel>
        <relationshipName>Engagement_Resources_Stakeholders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Identify the title of resource or stakeholder for the Resource/Stakeholder name entered above.</description>
        <inlineHelpText>Identify the title of resource or stakeholder for the Resource/Stakeholder name entered above.</inlineHelpText>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>CMIO</fullName>
                </value>
                <value>
                    <fullName>CMO</fullName>
                </value>
                <value>
                    <fullName>CMO-HC</fullName>
                </value>
                <value>
                    <fullName>CNO</fullName>
                </value>
                <value>
                    <fullName>CXO-Other</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Sr. Manager/Manager</fullName>
                </value>
                <value>
                    <fullName>SVP</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Identify the type of resource or stakeholder for the Resource/Stakeholder name entered above.</description>
        <inlineHelpText>Identify the type of resource or stakeholder for the Resource/Stakeholder name entered above.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT Sponsor</fullName>
                </value>
                <value>
                    <fullName>LOB Sponsor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Business Transformation (BTx) is a sales process that targets our customers' critical business needs. It enables account teams to identify sales opportunities and best position Cisco products, services and solutions.</description>
    <label>BTx Project Resource/Stakeholder</label>
    <nameField>
        <displayFormat>BTx Resource-{0}</displayFormat>
        <label>BTx Resource</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BTx Project Resources/Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Multiple_Resource_Check</fullName>
        <active>true</active>
        <description>Prevents user from selecting multiple names for a resource record</description>
        <errorConditionFormula>NOT( ISBLANK(Cisco_Partner_Resource_Name__c)) &amp;&amp;
NOT(  ISBLANK(Customer_Stakeholder_Name__c ))</errorConditionFormula>
        <errorMessage>Please enter either "Cisco/Partner Resource Name" or "Customer Stakeholder Name" but not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resource_Required</fullName>
        <active>true</active>
        <description>Prevents user from saving the resource record without resource</description>
        <errorConditionFormula>ISBLANK(TRIM(Cisco_Partner_Resource_Name__c)) &amp;&amp;
ISBLANK(Customer_Stakeholder_Name__c )</errorConditionFormula>
        <errorMessage>Please enter either "Cisco/Partner Resource Name" or "Customer Stakeholder Name".</errorMessage>
    </validationRules>
</CustomObject>